fix agent sidebar visibility

--- a/src/scss/components/_forms.scss
+++ b/src/scss/components/_forms.scss
@@ -166,7 +166,7 @@ nav.sheet-tabs.side.party {
 
 &.sheet nav.sheet-tabs.side.agent {
   top: 540px;
-  right: -450px;
+  right: -460px;
   border-top: none;
   z-index: -1;
   .item {
